<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_categories"
        android:title="@string/category" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_mylist"
        android:icon="@drawable/ic_document"
        android:title="@string/my_list" />
    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_shopping_basket"
        android:title="@string/basket" />

</menu>